--- a/client/tables.pug
+++ b/client/tables.pug
@@ -2,45 +2,8 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    style(type='text/css').
-      * {
-        box-sizing: border-box;
-      }
-      body, form, table, fieldset {
-        padding: 0;
-        margin: 0;
-        border: 0;
-      }
-      body {
-        font-size: 19px;
-        font-family: Arial, sans-serif;
-        background-color: black;
-        padding: 30px;
-      }
-      h3 {
-        color: white;
-        font-weight: 100;
-        padding: 60px 0 40px;
-        margin: 0;
-      }
-      table {
-        width: 100%;
-        background-color: white;
-        border-collapse: collapse;
-      }
-      table th {
-        text-align: left;
-        padding: 20px;
-        background-color: purple;
-        color: white;
-        border-bottom: 2px solid black;
-        border-right: 1px solid black;
-      }
-      table td {
-        padding: 20px;
-        border-bottom: 1px solid black;
-        border-right: 1px solid #999;
-      }
+    link(rel='stylesheet', href='assets/reset.css')
+    link(rel='stylesheet', href='assets/tables.css')
 
   body
     h3 Bases de comparação
