--- a/client/assets/main.css
+++ b/client/assets/main.css
@@ -1,6 +1,10 @@
 * {
   box-sizing: border-box;
 }
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+}
 h3 {
   color: white;
   font-weight: 100;
@@ -18,16 +22,23 @@ b {
 }
 body {
   font-size: 19px;
-  font-family: Arial, sans-serif;
-  background-color: black;
-  margin-right: 300px;
+  background: #111111; /* Old browsers */
+  background: -moz-linear-gradient(-45deg, #111111 0%, #3B1C77 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(-45deg, #111111 0%,#3B1C77 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(135deg, #111111 0%,#3B1C77 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#111111', endColorstr='#3B1C77',GradientType=1 );
+  padding-bottom: 300px;
 }
 label {
   display: block;
   cursor: pointer;
   padding: 30px;
   border-bottom: 1px solid white;
-  background-color: purple;
+  background: #763cfc; /* Old browsers */
+  background: -moz-linear-gradient(-45deg, #763cfc 0%, #544fef 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(-45deg, #763cfc 0%,#544fef 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(135deg, #763cfc 0%,#544fef 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#763cfc', endColorstr='#544fef',GradientType=1 );
   color: white;
   transition: opacity .3s ease;
   opacity: 1;
@@ -41,16 +52,51 @@ label:last-child {
 input {
   margin-right: 10px;
 }
+input[type="checkbox"], input[type="radio"] {
+  visibility: hidden;
+}
+label span {
+  position: relative;
+}
+label span:before {
+  content: "";
+  background-image: url('check.svg');
+  background-repeat: no-repeat;
+  background-position: left center;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  left: -30px;
+  opacity: 0.3;
+}
+input[type="checkbox"]:checked + span:before {
+  opacity: 1;
+}
 #response {
   background-color: white;
   color: black;
   position: fixed;
   padding: 30px;
   text-align: center;
-  top: 0;
-  right: 0;
-  width: 300px;
-  min-height: 100vh;
-  border-left: 2px solid black;
+  bottom: 0;
+  width: 100%;
+  min-height: 50px;
+  border-top: 2px solid black;
   margin: 0;
+}
+.credits {
+  color: white;
+  text-align: center;
+  padding: 30px;
+  font-size: 14px;
+  margin-top: 60px;
+}
+
+a {
+  color: white;
+}
+
+.credits a {
+  display: inline-block;
+  margin: 0 3px;
 }
