--- a/client/index.pug
+++ b/client/index.pug
@@ -6,31 +6,23 @@ html
     link(rel='stylesheet', href='assets/general.css')
     link(rel='stylesheet', href='assets/main.css')
     link(href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css')
-
   body
     form.pure-form.pure-form-stacked
-      fieldset
-        h3 Quais são os maiores desafios do seu projeto?
-        each challenge, index in db.challenges
-          label.pure-checkbox.gradient
-            input(type='checkbox', name="challenges", value=index)
-            span= challenge
+      each comparisonBase, baseIndex in db.bases
+        fieldset
+          - var title = db.basesQuestions[baseIndex]
+          - var database = db[comparisonBase]
 
-      fieldset
-        h3 Qual a duração do projeto (tempo de desenvolvimento + tempo que ficará online)?
-        each time, index in db.time
-          label.pure-radio.gradient
-            input(type='radio', name="time", value=index)
-            span= time
+          h3= title
 
-      fieldset
-        h3 Com quais das seguintes questões sua equipe mais se preocupa?
-        each premise, index in db.premises
-          label.pure-checkbox.gradient
-            input(type='checkbox', name="premises", value=index)
-            span= premise
+          each item, index in database
+            - var type = db.basesInputTypes[baseIndex]
+            
+            label.pure-checkbox.gradient
+              input(type=type, name=comparisonBase, value=index)
+              span= item
 
-    div#response Marque suas dificuldades e verei como posso ajudar...
+    div#response Check what troubles you!
     div.credits
       | Want to see behind the scenes? Go to
       a(href='/tables') the tables
@@ -47,5 +39,8 @@ html
       |  is licensed by
       a(href='http://creativecommons.org/licenses/by/3.0/', title='Creative Commons BY 3.0', target='_blank') CC 3.0 BY
 
+    - var comparisonsStrings = "'" + db.comparisons.join("','") + "'"
     script(src='/socket.io/socket.io.js')
+    script.
+      var comparisons = [#{comparisonsStrings}]
     script(src='assets/client.js')
