--- a/client/tables.pug
+++ b/client/tables.pug
@@ -11,6 +11,14 @@ html
     - function capitalizeFirstLetter(string) {
     -   return string.charAt(0).toUpperCase() + string.slice(1);
     - }
+    header
+      .left
+        a(href='/')
+          h1.logo zhou-yi
+            span } web dev divination wanted?
+
+      .right
+        iframe(src="https://ghbtns.com/github-btn.html?user=caiovaccaro&repo=zhou-yi&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px")
 
     h3 Bases of comparison
     each tableName in db.bases
